--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
   <!-- FONT AWESOME ICONS -->
   <script src="https://kit.fontawesome.com/1b2f2592b4.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <style>
     .custom-toggler.navbar-toggler {
       border-color: #fff;
