--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <button type="button" class="btn btn-outline-info btn-lg sign-btn">Partner</button>
         </div>
         <div class="col-md-6">
-          <img src="images/titleImage.jpeg" class="title-image" alt="">
+          <img src="Images/titleImage.jpeg" class="title-image" alt="">
         </div>
       </div>
     </div>
