newsletter section added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="#" style="color:#fff">It's ABC</a>
+          <a class="navbar-brand" href="#" style="color:#fff"><img src="Images/logo.png" alt="Logo" width="60" height="50" class="d-inline-block align-text-top">EduMotive</a>
           <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -75,7 +75,8 @@
       <!--Title-->
       <div class="row">
         <div class="col-md-6">
-          <h1 class="title-heading">Come, Lay The Foundation Of Education!</h1>
+          <h1 class="title-heading">Education For The Students, By The Students</h1>
+          <!--Come, Lay The Foundation Of Education!-->
           <h4 class = "signupcol">Sign Up</h4>
           <p>as</p>
           <button type="button" class="btn btn-outline-info btn-lg sign-btn">Volunteer</button>
@@ -86,6 +87,25 @@
         </div>
       </div>
     </div>
+  </section>
+  <section id="Newsletter">
+    <section class="newsletter">
+<div class="container">
+<div class="row">
+<div class="col-sm-12">
+	<div class="content">
+		<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+	<div class="input-group">
+         <input type="email" class="form-control" placeholder="Enter your email">
+         <span class="input-group-btn">
+         <button class="btn" type="submit">Subscribe Now</button>
+         </span>
+          </div>
+	</div>
+</div>
+</div>
+</div>
+</section>
   </section>
 </body>
 
