title section slideshow added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,20 @@
           <button type="button" class="btn btn-outline-info btn-lg sign-btn">Partner</button>
         </div>
         <div class="col-md-6">
-          <img src="Images/titleImage.jpeg" class="title-image" alt="">
+        <!--  <img src="Images/titleImage.jpeg" class="title-image" alt="">-->
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Images/slide1.jpeg" height="450" width="150%" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/slide2.jpg" height="450" width="150%" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="Images/slide3.jfif" height="450" width="150%" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
         </div>
       </div>
     </div>
