other sections added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
       </div>
     </div>
   </section>
+<!-- feedback section -->
+
+<section id="feedback">
+  <div class="container-fluid">
+
+  <h2>Your Feedback Matters us Most.</h2>
+  <p>Kindly share your feedback</p>
+  <!-- <div class="feedback-form"> -->
+  <a class="btn btn-primary btn-lg sign-btn feedback-but" href="https://docs.google.com/forms/d/e/1FAIpQLScSTBSF76l8RWxXpBeT9w4Ko8nYQDzM2aZfo5XRtLQtQZnJQg/viewform?usp=sf_link" role="button" target="_blank">Give your views</a>
+  <!-- </div> -->
+
+  </div>
+</section>
+
+
+  <!--newsletter-->
+
   <section id="Newsletter">
     <section class="newsletter">
 <div class="container">
@@ -120,9 +137,17 @@
 </div>
 </section>
   </section>
-<div class="feedback-form">
-<a class="btn btn-outline-info btn-lg sign-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScSTBSF76l8RWxXpBeT9w4Ko8nYQDzM2aZfo5XRtLQtQZnJQg/viewform?usp=sf_link" role="button">Feedback</a>
-</div>
-</body>
 
+</body>
+<!-- Footer -->
+
+<footer id="footer">
+  <i class="fa-brands fa-twitter fa-xs social-media"></i>
+  <i class="fa-brands fa-facebook fa-xs social-media"></i>
+  <i class="fa-brands fa-instagram fa-xs social-media"></i>
+  <i class="fa-solid fa-envelope fa-xs social-media"></i>
+
+  <p>© Copyright EduMotive 2022</p>
+
+</footer>
 </html>
