--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <!--Favicon Linking-->
   <link rel="apple-touch-icon" sizes="57x57" href="Images/favicon/apple-icon-57x57.png">
