donation page added
donation page added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                 <a class="nav-link" href="#" style="color:#fff">Feedback</a>
               </li>
               <button type="button" class="btn btn-success">Sign In</button>
+              <!-- <a class="btn btn-light donate" href="donation/donation_1.html" role="button" target="_blank">Donate</a> -->
+              <a href="donation/donation_1.html" target="_blank"><button type="button" class="btn btn-light donate" href="donation/donation_1.html">Donate</button></a>
             </ul>
           </div>
         </div>
