--- a/partner.html
+++ b/partner.html
@@ -45,7 +45,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/main.css" rel="stylesheet">
+  <link href="CSS/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Impact - v1.1.1
@@ -62,7 +62,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a
-            href="mailto:contact@example.com">edumotive@gmai.com</a></i>
+            href="mailto:contact@example.com">edumotive@gmail.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9711089508</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -79,7 +79,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="Images/logo_wbg.png" alt="">
         <h1>Edu<span>M</span>otive</h1>
       </a>
       <nav id="navbar" class="navbar">
