--- a/volunteer.html
+++ b/volunteer.html
@@ -45,7 +45,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/main.css" rel="stylesheet">
+  <link href="CSS/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Impact - v1.1.1
@@ -79,7 +79,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="Images/logo_wbg.png" alt="">
         <h1>Edu<span>M</span>otive</h1>
       </a>
       <nav id="navbar" class="navbar">
