new demo home page
added

--- a/index_1.html
+++ b/index_1.html
@@ -22,11 +22,15 @@
   <meta name="msapplication-TileImage" content="Images/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>EduMotive - Partner</title>
+  <title>EduMotive - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  
+  <!-- Favicons -->
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <!--Bootstrap-->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> -->
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,8 +62,7 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a
-            href="mailto:contact@example.com">edumotive@gmail.com</a></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">edumotive@gmail.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9711089508</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -81,12 +84,13 @@
       </a>
       <nav id="navbar" class="navbar">
         <ul>
+          <li><a href="donation/donation_1.html" target="_blank">Donate</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a href="#team">Team</a></li> -->
-          <li><a href="partner.html">Partner</a></li>
+          <li><a href="volunteer.html">Events</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -105,6 +109,39 @@
             </ul>
           </li> -->
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
+          <li><button type="button" name="button" class="btn">
+              <style media="screen">
+                .btn {
+                  background: #3498db;
+                  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+                  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+                  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+                  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+                  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+                  -webkit-border-radius: 29;
+                  -moz-border-radius: 29;
+                  border-radius: 29px;
+                  font-family: Arial;
+                  color: #ffffff;
+                  font-size: 20px;
+                  padding: 10px 20px 10px 20px;
+                  text-decoration: none;
+                }
+
+                .btn:hover {
+                  background: #3cb0fd;
+                  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+                  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+                  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+                  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+                  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+                  text-decoration: none;
+                }
+              </style>
+
+              <a href="signin.html">Sign In</a>
+            </button></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -123,7 +160,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Partners</h2>
+              <h2><span style="color:#f85a40">E</span>ducation <span style="color:#f85a40">F</span>or the <span style="color:#f85a40">S</span>tudents, <span style="color:#f85a40">B</span>y the <span style="color:#f85a40">S</span>tudents</h2>
               <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut
                 a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum
                 dolorem.</p>
@@ -135,7 +172,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
+            <!-- <li>Blog</li> -->
           </ol>
         </div>
       </nav>
@@ -390,8 +427,7 @@
   </footer><!-- End Footer -->
   <!-- End Footer -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
 
