home page updated
...

--- a/index_1.html
+++ b/index_1.html
@@ -286,7 +286,7 @@
               </div>
 
             </article>
-          </div><!-- End post list item -->
+          </div><!-- End post list item
 
           <div class="col-xl-4 col-md-6">
             <article>
@@ -312,7 +312,7 @@
               </div>
 
             </article>
-          </div><!-- End post list item -->
+          </div><!-- End post list item
 
           <div class="col-xl-4 col-md-6">
             <article>
@@ -338,9 +338,9 @@
               </div>
 
             </article>
-          </div><!-- End post list item --> -->
+          </div><!-- End post list item -->
 
-        </div><!-- End blog posts list -->
+        <!-- End blog posts list -->
 
         <div class="blog-pagination">
           <ul class="justify-content-center">
@@ -352,7 +352,6 @@
 
       </div>
     </section><!-- End Blog Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -408,7 +407,6 @@
 
       </div>
 
-    </div>
     </div>
 
     <div class="container mt-4">
