Home Page updated
...

--- a/index_1.html
+++ b/index_1.html
@@ -164,7 +164,33 @@
               <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut
                 a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum
                 dolorem.</p>
+                <h4 style="font-family:Montserrat; color:#ffff">Sign Up as</h4>
+                <div>
+                  <a href="signup.html" target="_blank"><button type="button" name="button" class="sign-up-btns">Partner</button></a>
+                  <style media="screen">
+                    .sign-up-btns {
+                      -webkit-border-radius: 28;
+                      -moz-border-radius: 28;
+                      border-radius: 28px;
+                      font-family: Montserrat;
+                      color: #ffffff;
+                      font-size: 20px;
+                      background: rgba(0, 131, 116, 1);
+                      padding: 15px 25px 15px 25px;
+                      text-decoration: none;
+                      border: solid;
+                      margin: 15px 15px 15px 15px;
+                    }
+
+                    .sign-up-btns:hover {
+                      background: rgba(0, 182, 161, 1);
+                      text-decoration: none;
+                    }
+                  </style>
+                  <a href="signup.html" target="_blank"><button type="button" name="button" class="sign-up-btns">Volunteer</button></a>
+                </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -352,6 +378,33 @@
 
       </div>
     </section><!-- End Blog Section -->
+    <section id="feedback" style="text-align:center">
+      <div class="container-fluid">
+
+      <h2>Your Feedback Matters us Most.</h2>
+      <p style="font-family:Open Sans">Kindly share your feedback</p>
+      <br>
+<a href="feedback.html" class="feedback-button">Give Your Views</a>
+<style media="screen">
+  .feedback-button {
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Montserrat;
+    color: #ffffff;
+    font-size: 20px;
+    background: rgba(0, 131, 116, 1);
+    padding: 20px 25px 20px 25px;
+    text-decoration: none;
+  }
+
+  .feedback-button:hover {
+    background: rgba(0, 182, 161, 1);
+    text-decoration: none;
+  }
+</style>
+      </div>
+    </section>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -376,7 +429,7 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index_1.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <!-- <li><a href="#">Services</a></li> -->
             <!-- <li><a href="#">Terms of service</a></li> -->
