--- a/donation/donation_1.html
+++ b/donation/donation_1.html
@@ -48,7 +48,7 @@
 				<div class="user-avatar">
 					<img src="../Images/logo.png" alt="Admin">
 				</div>
-				<h5 class="user-name">EduMotive</h5>
+				<h5 class="user-name">Edu<span style="color:#f85a40">M</span>otive</h5>
 				<h6 class="user-email">donations@edumotive.org</h6>
 			</div>
 			<div class="about">
@@ -64,7 +64,7 @@
 	<div class="card-body">
 		<div class="row gutters">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-				<h6 class="mb-2 text-primary">Personal Details</h6>
+				<h6 class="mb-2 text-primary" style="color:#f85a40">Personal Details</h6>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
@@ -93,7 +93,7 @@
 		</div>
 		<div class="row gutters">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-				<h6 class="mt-3 mb-2 text-primary">Address</h6>
+				<h6 class="mt-3 mb-2 text-primary" style="font-color:#f85a40">Address</h6>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
@@ -125,7 +125,7 @@
 				<div class="text-right">
 					<!-- <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button> -->
 <div class="d-grid gap-2">
-          <button type="button" id="submit" name="submit" class="btn btn-primary donate-btn">Next</button>
+          <button type="button" id="submit" name="submit" class="btn btn-primary btn-success donate-btn">Next</button>
 				</div>
         </div>
 			</div>
@@ -136,7 +136,77 @@
 </div>
 </div>
 </div>
-   <footer id="footer">
+<!-- ======= Footer ======= -->
+<link href="../CSS/main.css" rel="stylesheet">
+<footer id="footer" class="footer">
+
+  <div class="container">
+    <div class="row gy-4">
+      <div class="col-lg-5 col-md-12 footer-info">
+        <a href="../index_1.html" class="logo d-flex align-items-center">
+          <span>EduMotive</span>
+        </a>
+        <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
+          donna mare fermentum iaculis eu non diam phasellus.</p>
+        <div class="social-links d-flex mt-4">
+          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-6 footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="../index_1.html">Home</a></li>
+          <li><a href="../about.html">About us</a></li>
+          <!-- <li><a href="#">Services</a></li> -->
+          <!-- <li><a href="#">Terms of service</a></li> -->
+          <li><a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
+
+      <!-- <div class="col-lg-2 col-6 footer-links">
+        <h4>Our Services</h4>
+        <ul>
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">Product Management</a></li>
+          <li><a href="#">Marketing</a></li>
+          <li><a href="#">Graphic Design</a></li>
+        </ul> -->
+    </div>
+
+    <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+      <h4>Contact Us</h4>
+      <p>
+        A108 Adam Street <br>
+        New York, NY 535022<br>
+        United States <br><br>
+        <strong>Phone:</strong> +91 9711089508<br>
+        <strong>Email:</strong> Edumotive@gmail.com<br>
+      </p>
+
+    </div>
+
+  </div>
+
+  <div class="container mt-4">
+    <div class="copyright">
+      &copy; Copyright <strong><span>EduMotive</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits">
+      <!-- All the links in the footer should remain intact. -->
+      <!-- You can delete the links only if you purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/impact-bootstrap-business-website-template/ -->
+      Designed by EduMotive
+    </div>
+  </div>
+
+</footer><!-- End Footer -->
+   <!-- <footer id="footer">
 
   <i class="fa-brands fa-twitter fa-xl social-media"></i>
   <i class="fa-brands fa-facebook fa-xl social-media"></i>
@@ -145,7 +215,7 @@
 
   <p>© Copyright EduMotive 2022</p>
 
-</footer>
+</footer> -->
 </div>
 </body>
 </html>
