--- a/volunteer.html
+++ b/volunteer.html
@@ -59,7 +59,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a
-            href="mailto:contact@example.com">edumotive@gmai.com</a></i>
+            href="mailto:contact@example.com">edumotive@gmail.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9711089508</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -74,14 +74,14 @@
   <header id="header" class="header d-flex align-items-center">
 
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index_1.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="Images/logo_wbg.png" alt="">
         <h1>Edu<span>M</span>otive</h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index_1.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
@@ -105,6 +105,7 @@
             </ul>
           </li> -->
           <li><a href="contact.html">Contact</a></li>
+<li><a href="feedback.html">Feedback</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -134,7 +135,7 @@
       <nav>
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index_1.html">Home</a></li>
             <li>Blog</li>
           </ol>
         </div>
@@ -324,7 +325,7 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="index_1.html" class="logo d-flex align-items-center">
             <span>EduMotive</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
@@ -340,7 +341,7 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index_1.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <!-- <li><a href="#">Services</a></li> -->
             <!-- <li><a href="#">Terms of service</a></li> -->
