--- a/donation/donation_1.html
+++ b/donation/donation_1.html
@@ -143,7 +143,7 @@
   <div class="container">
     <div class="row gy-4">
       <div class="col-lg-5 col-md-12 footer-info">
-        <a href="../index_1.html" class="logo d-flex align-items-center">
+        <a href="../index.html" class="logo d-flex align-items-center">
           <span>EduMotive</span>
         </a>
         <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
@@ -159,7 +159,7 @@
       <div class="col-lg-2 col-6 footer-links">
         <h4>Useful Links</h4>
         <ul>
-          <li><a href="../index_1.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../about.html">About us</a></li>
           <!-- <li><a href="#">Services</a></li> -->
           <!-- <li><a href="#">Terms of service</a></li> -->
