Home page stats added
....

--- a/index.html
+++ b/index.html
@@ -368,16 +368,50 @@
 
         <!-- End blog posts list -->
 
-        <div class="blog-pagination">
+        <!--<div class="blog-pagination">
           <ul class="justify-content-center">
             <li><a href="#">1</a></li>
             <li class="active"><a href="#">2</a></li>
             <li><a href="#">3</a></li>
           </ul>
-        </div><!-- End blog pagination -->
+        </div> End blog pagination -->
 
       </div>
     </section><!-- End Blog Section -->
+    <!-- ======= Stats Counter Section ======= -->
+    <section id="stats-counter" class="stats-counter">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row gy-4 align-items-center">
+
+          <div class="col-lg-6">
+            <img src="assets/img/stats-img.svg" alt="" class="img-fluid">
+          </div>
+
+          <div class="col-lg-6">
+
+            <div class="stats-item d-flex align-items-center">
+              <span data-purecounter-start="0" data-purecounter-end="499" data-purecounter-duration="5" class="purecounter"></span>
+              <p><strong>Volunteers Registered</strong> consequuntur quae diredo para mesta</p>
+            </div><!-- End Stats Item -->
+
+            <div class="stats-item d-flex align-items-center">
+              <span data-purecounter-start="0" data-purecounter-end="395" data-purecounter-duration="5" class="purecounter"></span>
+              <p><strong>Partners</strong> adipisci atque cum quia aut</p>
+            </div><!-- End Stats Item -->
+
+            <div class="stats-item d-flex align-items-center">
+              <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="5" class="purecounter"></span>
+              <p><strong>Hours of sessions</strong> organised</p>
+            </div><!-- End Stats Item -->
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Stats Counter Section -->
+
     <section id="feedback" style="text-align:center">
       <div class="container-fluid">
 
@@ -429,7 +463,7 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="index_1.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <!-- <li><a href="#">Services</a></li> -->
             <!-- <li><a href="#">Terms of service</a></li> -->
