--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@
 
             <div class="stats-item d-flex align-items-center">
               <span data-purecounter-start="0" data-purecounter-end="499" data-purecounter-duration="5" class="purecounter"></span>
-              <p><strong>Volunteers Registered</strong> consequuntur quae diredo para mesta</p>
+              <p><strong>Volunteers Registered</strong> on our site for teaching</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
               <span data-purecounter-start="0" data-purecounter-end="395" data-purecounter-duration="5" class="purecounter"></span>
-              <p><strong>Partners</strong> adipisci atque cum quia aut</p>
+              <p><strong>Partners</strong> are doing great job</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
