--- a/about.html
+++ b/about.html
@@ -44,13 +44,17 @@
         <div class="container py-5">
             <div class="row h-100 align-items-center py-5">
                 <div class="col-lg-6">
-                    <h1 class="display-4">About Us</h1>
-                    <p class="lead text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sed veritatis, dolores nam expedita id repellat odio molestias ab velit aliquid sunt, voluptatibus praesentium ex et corporis itaque saepe? Culpa id exercitationem provident. Culpa explicabo quae corporis laborum autem hic quibusdam maxime id aliquid porro, maiores repudiandae quod sunt sint similique soluta aperiam quaerat voluptatibus consequuntur ipsa. Quia earum adipisci nemo veritatis voluptatibus accusantium excepturi..</p>
-                    <p class="lead text-muted">Snippet by
+                    <h1 class="display-4"><b>About Us</b></h1>
+                    <p class="lead text-muted mb-0">Education is an opportunity through which society and its people are empowered. It aids in the social, emotional and psychological growth of everyone. However, not all have been able to reap the benefits of the existing education system. Slum children’s education in India in this context remains a burning issue.</p>
+                    <p class="lead text-muted">The main aim of our website is to provide a platform that would help in educating the children who are left behind. We use this platform to bring together volunteers who are willing to contribute for a bright future of these underprivileged children.
+                      The focus is on mobilizing the community through localized campaigns, sensitization meetings involving existing community-level institutions, creating awareness about the entitlements of children and talking directly to particularly vulnerable families.
                         <!-- <a href="#" class="text-muted">
                             <u>hgdygdy</u>
                         </a> -->
                     </p>
+                    <p class="lead text-muted">We need to develop systems that would help in educating these young geniuses.
+                    </p> 
+                    <p><b>Education for the Students, By the Students.</b></p>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block"><img
                         src="https://bootstrapious.com/i/snippets/sn-about/illus.png" alt="" class="img-fluid"></div>
