--- a/index_1.html
+++ b/index_1.html
@@ -110,10 +110,10 @@
 <section id="feedback">
   <div class="container-fluid">
 
-  <h2>Your Feedback Matters us Most.</h2>
+  <h2>Your Feedback Matters to us the Most.</h2>
   <p>Kindly share your feedback</p>
   <!-- <div class="feedback-form"> -->
-  <a class="btn btn-primary btn-lg sign-btn feedback-but" href="https://docs.google.com/forms/d/e/1FAIpQLScSTBSF76l8RWxXpBeT9w4Ko8nYQDzM2aZfo5XRtLQtQZnJQg/viewform?usp=sf_link" role="button" target="_blank">Give your views</a>
+  <a class="btn btn-primary btn-lg sign-btn feedback-but" href="https://docs.google.com/forms/d/e/1FAIpQLScSTBSF76l8RWxXpBeT9w4Ko8nYQDzM2aZfo5XRtLQtQZnJQg/viewform?usp=sf_link" role="button" target="_blank">Share your reviews</a>
   <!-- </div> -->
 
   </div>
