--- a/partner.html
+++ b/partner.html
@@ -304,14 +304,14 @@
           </div><!-- End post list item -->
 
         </div><!-- End blog posts list -->
-
+<!--
         <div class="blog-pagination">
           <ul class="justify-content-center">
             <li><a href="#">1</a></li>
             <li class="active"><a href="#">2</a></li>
             <li><a href="#">3</a></li>
           </ul>
-        </div><!-- End blog pagination -->
+        </div><! End blog pagination -->
 
       </div>
     </section><!-- End Blog Section -->
