home page infographic added
....

--- a/index.html
+++ b/index.html
@@ -411,6 +411,21 @@
 
       </div>
     </section><!-- End Stats Counter Section -->
+<section id = "whatwedo" style="text-align:center">
+  <h1><strong>What We Do</strong></h1>
+  <br>
+  <img src="assets/img/what_wedo_1.png" class = "whatwedo" alt="what we do">
+  <img src="assets/img/what_wedo_2.png" class = "whatwedo" alt="NA">
+<style media="screen">
+  @media (max-width:870px) {
+    .whatwedo{
+      width: 30rem;
+    }
+  }
+</style>
+</section>
+
+
 
     <section id="feedback" style="text-align:center">
       <div class="container-fluid">
