volunteer page update

--- a/volunteer.html
+++ b/volunteer.html
@@ -306,13 +306,13 @@
 
         </div><!-- End blog posts list -->
 
-        <div class="blog-pagination">
+        <!-- <div class="blog-pagination">
           <ul class="justify-content-center">
             <li><a href="#">1</a></li>
             <li class="active"><a href="#">2</a></li>
             <li><a href="#">3</a></li>
           </ul>
-        </div><!-- End blog pagination -->
+        </div><!-- End blog pagination --> -->
 
       </div>
     </section><!-- End Blog Section -->
