--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 <style media="screen">
   @media (max-width:870px) {
     .whatwedo{
-      width: 30rem;
+      width: 80%;
     }
   }
 </style>
@@ -450,6 +450,7 @@
   .feedback-button:hover {
     background: rgba(0, 182, 161, 1);
     text-decoration: none;
+    color:White;
   }
 </style>
       </div>
