--- a/volunteer.html
+++ b/volunteer.html
@@ -136,7 +136,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
+            <li>Events</li>
           </ol>
         </div>
       </nav>
